Add ILCDIRAC link for import in, e.g., landscape

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,3 +4,4 @@ python_files=[tT]est*.py # find all Test*, Test_*, *tests, *test, etc. files. Mi
 #python_files=*est*.py
 python_classes=*
 python_functions=test_*
+norecursedirs=ILCDIRAC
